force-app/main/default/objects/CventEvents__DataTransferMapping__c/fields/CventEvents__CventField__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__CventField__c</fullName>
    <description>Stores source field API name.</description>
    <inlineHelpText>Stores source field API name.</inlineHelpText>
    <label>Cvent Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>