force-app/main/default/objects/CventEvents__DataTransferMapping__c/fields/CventEvents__SalesforceField__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__SalesforceField__c</fullName>
    <description>Stores target field API name.</description>
    <inlineHelpText>Stores target field API name.</inlineHelpText>
    <label>Salesforce Field</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>